--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.kafka.consumer.groupId=my-group-id
+spring.kafka.consumer.valueDeserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+spring.kafka.producer.valueSerializer=org.apache.kafka.common.serialization.IntegerSerializer
